@@ -147,6 +147,8 @@
           (http://www.packetfence.org/mantis/view.php?id=683)
         fixed issue in menu display during reports
           (http://www.packetfence.org/mantis/view.php?id=684)
+        node/add.php shows status option list
+          (http://www.packetfence.org/mantis/view.php?id=686)
 
 1.8.1
         authorized @ as first symbol in password
